* Adding quantization and cron pattern options for all eligible polling data sources
* Adding runtime.javascript.metrics. env property to log javascript execution times of the ScriptEngine
* Adding support to expose metrics for OrderedRealTimeTimer tasks, rework timing system
* Modularize Event Detectors
* Modularize Event Handlers
* User passwords upgraded

*Version 2.7.12*
* ETag Support
* Fixes to improve keeping Realtime Cache Up-to-date with Mango Point States
* Change H2 we console startup script to use same location as Mango's H2 database
* Added robots.txt to stop web crawling
* Changed data point permissions editing area to support more complex queries and null vs empty permissions
* Added support for Apache Cassandra point value storage (CassandraDB module required)

*Version 2.7.10*
* Fixing bug in upgrade and create-tables scripts for MySQL

*Version 2.7.8*
* NoSQL Database env.property to change file access type for improved performance on various systems.
* Fixed bug in multi-threaded startup that would fail to initialze some data sources if the number of threads used was greater than the number of running data sources.
* Added JSON Data for custom data storage
* Replacing Spline plot type renderer on for JFree Image Chart to reduce artifacts on plots, Spline type lines are now rendered as Lines.

*Version 2.7.6*
* Adding db.nosql env properties to allow setting the location of the NoSQL data store
* Fixed bug where HTML5 pages didn't save URL parameters on a User's home URL
* Fixed bug where OSX could have problems with XHR requests from the UI
* Added tooltips to all icons on HTML5 page toolbar
* Adding Angular support for new Mango Angular Directives
* Startup script change to create logs directory on first run to capture script output
* Fixed charting for Safari and iOS via AmCharts

*Version 2.7.4*
* Adding multi-threading to data source initialization
* Change to allow i-frame embedding of Mango hosted pages on Mango Hosted pages